updated routes to include dash, seeded db, commented out devise for now

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "user", new_user_registration_path %>  <%= link_to "clinic", new_clinic_registration_path %> 
+<div><%= link_to "user", new_user_registration_path %>  <%= link_to "clinic", new_clinic_registration_path %></div>
+
+<div><%= link_to "user login", new_user_session_path %> <%= link_to "clinic login", clinic_session_path %></div>
+
+<h2><%= current_user.email %></h2>
