--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -18,8 +18,14 @@ $danger:     $red;
 $warning:    $orange;
 
 // Buttons & inputs' radius
-$border-radius:    2px;
-$border-radius-lg: 2px;
-$border-radius-sm: 2px;
+$border-radius:    5px;
+$border-radius-lg: 5px;
+$border-radius-sm: 5px;
 
 // Override other variables below!
+$my-background-color: #ECF4F3;
+$my-background-color-white: #FFFFFF;
+$submit-button-orange: #FF7E67;
+$submit-button-green: #006A71;
+$back-button-white-green: #FFFFFF;
+$back-button-white-orange: #FFFFFF;
