--- a/app/views/users/dash.html.erb
+++ b/app/views/users/dash.html.erb
@@ -1,2 +1,19 @@
 <%= link_to 'My profile', user_path(current_user) %>
-<%= @user.bookings %>
+
+<h1>Booking detail</h1>
+
+
+ <% @user.pets.each do |pet| %>
+    <% pet.bookings.each do |booking| %>
+        <%= booking.date %>
+        <%= booking.time %>
+    <% end %>
+<% end %>  
+
+
+
+   <div id="map"
+        style="width: 100%; height: 600px;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
