--- a/app/views/users/dash.html.erb
+++ b/app/views/users/dash.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'My profile', user_path(current_user) %>
 
-<h1>Booking detail</h1>
+<h1>Upcoming appointment</h1>
 
 
  <% @user.pets.each do |pet| %>
@@ -12,8 +12,31 @@
 
 
 
-   <div id="map"
+   <%
+=begin%>
+ <div id="map"
         style="width: 100%; height: 600px;"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div> 
+<%
+=end%>
+
+
+<body>
+    <div class="row">
+      <div class="col" style="background-color: red">
+        <p>Hi</p>   
+     </div>
+
+      <div class="col" style="background-color: yellow">
+        <div class="column">
+            <div id="map"
+                style="width: 100%; height: 600px;"
+                data-markers="<%= @markers.to_json %>"
+                data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+            </div>   
+        </div>
+      </div>
     </div>
+</body>
