made a basic form skeleton for most of the pages required

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,6 @@
 <p>form for creating new booking</p>
 
 <%= simple_form_for [@clinic, @booking] do |f| %>
-<%= @clinic.name %>
+<%=f.input :date %>
+<%=f.input :time%>
 <% end %>
