--- a/app/views/clinics/registrations/new.html.erb
+++ b/app/views/clinics/registrations/new.html.erb
@@ -2,11 +2,15 @@
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
-
+   
   <div class="form-inputs">
+  <%= f.input :name, required: true, autofocus: true %>
+  <%= f.input :owner_name, required: true %>
+  <%= f.input :phone_number, required: true %>
+  <%= f.input :address, required: true %>
     <%= f.input :email,
                 required: true,
-                autofocus: true,
+                
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
