--- a/app/views/vets/new.html.erb
+++ b/app/views/vets/new.html.erb
@@ -1,1 +1,10 @@
 <p>form for crating new vet</p>
+
+<%= simple_form_for [@clinic,@vet] do |f| %>
+<%= f.input :first_name %>
+<%= f.input :last_name %>
+<%= f.input :speciality %>
+<%= f.input :bio %>
+
+
+<% end %>
