--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -1,38 +1,38 @@
 <body style="background-color: white;">
 
-<div class="container clinic-dashboard">
+<div class="container" style="margin-top: 20px">
 <h2 style="color: #FF7E67; font-weight: 400; font-size: 40px;">Your dashboard</h2>
 
 <h3 style="color: #006A71; font-weight: 200;"><%= @clinic.name %></h3>
 
 <%# @clinic.vets.each do |vet| %>
   <%# vet.bookings.each do |booking| %>
-  <div class="one-booking d-flex">
+  <div class="d-flex one-booking" style="margin-top: 40px; background-color: #ECF4F3; border: 1px solid lightgray">
 
-    <div class="one-booking-grey-bar">
+    <div class="one-booking-grey-bar" style="background-color: lightgray; width: 1%">
     </div>
 
-    <div class="one-booking-a">
+    <div class="one-booking-a" style="margin-right: 10px; padding: 5px 0 10px 10px">
       <p>12/12/2020 <%#= booking.date %></p>
     </div>
 
-    <div class="one-booking-b flex-fill">
+    <div class="flex-fill one-booking-b" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
       <p>Owner name: <%#= booking.user.name %></p>
       <p>Veterinary booked: <%#= booking.vet.name %></p>
     </div>
 
-    <div class="one-booking-c flex-fill">
+    <div class="flex-fill one-booking-c" style="  border-left: 1px solid lightgray; padding: 0 20px; padding-top: 5px">
       <p>Pet name: <%#= booking.pet.name %></p>
       <p>Pet species: <%#= booking.pet.species %></p>
       <p>Pet breed: <%#= booking.pet.breed %></p>
     </div>
 
 
-    <div class="one-booking-d dropdown">
-      <button class="btn one-booking-btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="dropdown one-booking-d">
+      <button class="btn dropdown-toggle one-booking-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="border: 1px solid #006A71; margin-top: 5px; margin-right: 5px; background-color: white; color: #006A71;">
       Manage
       </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu manage-action" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">Submit health report</a>
         <a class="dropdown-item" href="#">Pet health profile</a>
         <a class="dropdown-item" href="#">Change booking</a>
