--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  box-shadow: 5px 0 10px rgba(0,0,0,0.15);
 }
 
 .navbar-lewagon .navbar-collapse {
