--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -1,4 +1,5 @@
 <body style="background-color: white;">
+<%=render "shared/navbar"%>
 
 <div class="container" style="margin-top: 20px">
 <h2 style="color: #FF7E67; font-weight: 400; font-size: 40px;">Your dashboard</h2>
