finished first draft styling of the users dash page and also made small css changes in the clinics dash page

--- a/app/assets/stylesheets/pages/clinics/_dash.scss
+++ b/app/assets/stylesheets/pages/clinics/_dash.scss
@@ -2,9 +2,13 @@
   // margin-top: 20px;
 // }
 
-// .d-flex .one-booking {
-//   background-color: $my-background-color;
-// }
+.one-booking {
+  background-color: $my-background-color;
+  margin-top: 40px;
+  border: 1px solid lightgray;
+}
+
+
 
 // .one-booking .one-booking-grey-bar {
 //   background-color: lightgray;
