change styling of users dash and clinics dash and small changes to the controller as james suggested

--- a/app/assets/stylesheets/pages/clinics/_dash.scss
+++ b/app/assets/stylesheets/pages/clinics/_dash.scss
@@ -41,16 +41,17 @@
 //   color: $submit-button-green;
 // }
 
-// .btn :hover {
-//   background-color: $submit-button-green;
-//   color: white;
-//   text-decoration: none;
-// }
+.one-booking-btn:hover {
+   background-color: $submit-button-green;
+   color: white;
+   text-decoration: none;
+}
 
-// .manage-action:hover {
-//   background-color: $my-background-color;
-//   color: $submit-button-green;
-// }
+.one-booking-manage-action .dropdown-item:hover {
+   background-color: $my-background-color;
+   color: $submit-button-green;
+
+}
 
 
 
