--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -33,10 +33,10 @@
       <button class="btn dropdown-toggle one-booking-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="border: 1px solid #006A71; margin-top: 5px; margin-right: 5px; background-color: white; color: #006A71;">
       Manage
       </button>
-      <div class="dropdown-menu manage-action" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu one-booking-manage-action" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">Submit health report</a>
-        <a class="dropdown-item" href="#">Pet health profile</a>
-        <a class="dropdown-item" href="#">Change booking</a>
+        <!-- <a class="dropdown-item" href="#">Pet health profile</a> -->
+        <%= link_to "Pet health profile", class: "dropdown-item-link" %>
         <a class="dropdown-item" href="#">Cancel booking</a>
       </div>
     </div>
