--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -1,7 +1,7 @@
 
 <%= render "shared/navbar" %>
 
-  <div style="text-align: right">
+  <div style="text-align: right; position: -webkit-sticky; position: sticky; top: 0;">
     <%= button_to "Edit clinic profile", clinics_dash_path, class: "btn button-to-edit-clinic" %>
     <%= button_to "✚ Add a vet profile", clinics_dash_path, class: "btn button-to-edit-clinic" %>
   </div>
