--- a/app/views/vets/new.html.erb
+++ b/app/views/vets/new.html.erb
@@ -5,6 +5,5 @@
 <%= f.input :last_name %>
 <%= f.input :speciality %>
 <%= f.input :bio %>
-
-
+<%= f.submit "Submit", disable_with: 'Submiting...' %>
 <% end %>
