--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -1,27 +1,44 @@
+<%# <%= render "shared/navbar" %> 
 
-<%= render "shared/navbar" %>
+  <div style="text-align: right; position: -webkit-sticky; position: sticky; top: 0;">
+    <%= button_to "Edit clinic profile", clinics_dash_path, class: "btn button-to-edit-clinic" %>
+    <%= button_to "✚ Add a vet profile", new_clinic_vet_path(@clinic), class: "btn button-to-edit-clinic" %>
+  </div>
 
-<%= @clinic.name %>
-<%= @clinic.address %>
+<div class="container clinic-show">
 
-<div class="row">
-    <div class="col-3 " style="background-color: green; height: 100vh">
-        <div class= "row" >
-            <div class="col align-self-end">
-                hello
-            </div>
+  <h2><%= @clinic.name %></h2>
+  <h3><%= @clinic.location %></h3>
+
+  <!-- <div class="row"> -->
+
+<!-- Left column -->
+<!--     <div class="col-1 clinic-show-buttons">
+  <div class= "row" >
+        <div class="col align-self-end">
+    </div>
+      </div>
+    </div> -->
+
+
+<!-- Right column  -->
+    <div class="row col clinic-show-vet-cards">
+      <% @clinic.vets.each do |vet| %>
+        <div class= "col m-3 clinic-show-one-vet" style="background-color: white;">
+          <div style="text-align: center">
+            <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80" alt="photo" class="avatar vet-profile-picture">
+          </div>
+          <p><strong>Name:</strong> <%= vet.first_name %> <%= vet.last_name %></p>
+          <p><strong>Education:</strong></p>
+          <p><strong>Speciality:</strong> <%= vet.speciality %></p>
+          <p><strong>Bio: </strong> <%= vet.bio %></p>
+          <div style="text-align: center">
+            <%= button_to "edit", edit_clinic_vet_path(vet), class: "btn button-to-edit-vet" %>
+          </div>
         </div>
+      <% end %>
     </div>
-    <div class="row col-9" style="background-color: red; height: 100vh">
-        <% @clinic.vets.each do |vet| %>
-<div class= "col align-self-center m-3 " style="background-color: white;">
-        <p>Name:</p><%= vet.first_name %> <%= vet.last_name %>
-        <p>Education</p>
-        <p>Speciality</p> <%= vet.speciality %>
-        <p>Bio</p> <%= vet.bio %>
-        <%= button_to "edit", edit_clinic_vet_path(vet) %>
-</div>
-        <% end %>
 
-    </div>
+
+  <!-- </div> -->
 </div>
