--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,21 @@
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name),data:{contoller:"example"})  do |f| %>
   <%= f.error_notification %>
-
+   
   <div class="form-inputs">
+  <div>
+  <%= f.input :type, collection: %w[Clinic Owner], input_html: {data: {reflex: "change->ExampleReflex#change_signup"}} %>
+  </div>
+  <%if @type == "Clinic" %>
+  <%= f.input :owner_name, required: true,autofocus: true, placeholder: "Please input your clinic's name" %>
+  <%= f.input :name,required: true, placeholder: "Please input your full name"%>
+  
+  <%= f.input :location, required: true %>
+  <%= f.input :phone_number, required: true %>
     <%= f.input :email,
                 required: true,
-                autofocus: true,
+                
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
@@ -20,6 +29,30 @@
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
+  </div>
+  <% elsif @type %>
+  <%= f.input :name,required: true, autofocus: true, placeholder: "Please input your full name"%>
+  
+  <%= f.input :location, required: true %>
+  <%= f.input :phone_number, required: true %>
+    <%= f.input :email,
+                required: true,
+                
+                input_html: { autocomplete: "email" }%>
+    <%= f.input :password,
+                required: true,
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :password_confirmation,
+                required: true,
+                input_html: { autocomplete: "new-password" } %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, "Sign up" %>
+  </div>
+  </div>
+  <% end%>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "users/shared/links" %>
