--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,11 +1,12 @@
 <p> A form for adding a new pet </p>
 
-<%= simple_form_for [@user,@pet] do |f| %>
+<%= simple_form_for [@owner,@pet] do |f| %>
 <%= f.input :name %>
 <%= f.input :species %>
 <%= f.input :breed %>
-<%= f.input :gender %>
-<%= f.input :DOB %>
+<%= f.input :gender, collection: Pet.genders.keys %>
+
 <%= f.input :notes %>
+<%= f.submit "Submit", disable_with: 'Submiting...' %>
 
 <% end %>
