--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <p>User profile with booking detail/ lists of pets</p>
 <div>
-<h3><%= @user.first_name%> <%= @user.last_name %></h3>
+<h3><%= @user.name%></h3>
 <p><%= @user.location %></p>
 <p><%= @user.phone_number %></p>
 <p><%= @user.email %></p>
