--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -32,25 +32,16 @@
              <div>
               <p> Owner name:</p>
             </div>
+             <div>
+              <p> Fluffy behavior at clinic</p>
+            </div>
 
          </div>
 
-        <div class="col info">
-          <div class="row">
-            <div class="col-4">
-              <p> Fluffy photo:</p>
-            </div>
-
-              <div class="col-8">
-              <%= image_tag "dog-profile-2.jpg", :class => 'avatar-doggy'%>
-              </div>
-          </div>
-
-          <div>
-              <p> Fluffy behavior at clinic</p>
-          </div>
-
+        <div class="col info d-flex justify-content-center align-items-center">
+          <%= image_tag "chihuahua.jpg", :class => 'avatar-doggy'%>
        </div>
+
       </div>
 
     </div>
