--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 
 <!-- banner -->
 <div class= "banner d-flex justify-content-center" >
+
   <div class="container d-flex align-items-start">
 
     <div class="homepage container">
@@ -13,10 +14,9 @@
     </div>
 
     <div class="row d d-flex justify-content-center align-items-center">
-      <%= link_to "Sign_up", new_user_registration_path, class: "btn-veterinarian"  %>
-      
-      <%= link_to "Log in", new_user_session_path, class: "btn-petowner"  %> 
-      <%= link_to "user logout", destroy_user_session_path, method: :delete %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "btn-veterinarian"  %>
+
+      <%= link_to "Log In", new_user_session_path, class: "btn-petowner"  %>
     </div>
   </div>
 </div>
@@ -211,12 +211,12 @@
 
 </div>
 <!-- Carousel controls -->
-  <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+<!--   <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </a>
   <a class="carousel-control-next" href="#myCarousel" data-slide="next">
     <span class="carousel-control-next-icon"></span>
-  </a>
+  </a> -->
 
 </div>
 
