--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/index";
+@import "devise/registrations/index";
+
