--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,21 +10,29 @@ body {
   background-position: center;
   padding: 150px 0;
   display: flex;
-  background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), image-url("background-1.jpeg");
+  background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), image-url("background2.jpg");
   height: 100vh;
 }
 
 .homepage {
+  background-color: rgba(255,255,255,.2);
+  backdrop-filter: blur(5px);
+  padding: 20px 20px;
+  padding: 1rem;
+  border-radius: 1rem;
+  width:600px;
 
   h1{
-    color: $submit-button-orange;
+    color: $submit-button-green;
     font-weight: 700;
     font-family: 'Montserrat', sans-serif;
+
   }
   p {
     color:$submit-button-green;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+
 
   }
 }
