--- a/app/views/users/dash.html.erb
+++ b/app/views/users/dash.html.erb
@@ -1,5 +1,6 @@
 
 <%# <%= link_to 'My profile', user_path(current_user) %> %>
+<%= link_to "Log out", destroy_user_session_path, method: :delete %>
 
 
 
