Fixe landing page & profile owner

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,8 +1,8 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "users/dash";
+@import "owners/dash";
 
-@import "users/show";
+@import "owners/show";
 
 
 @import "pets/index";
