--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -1,14 +1,14 @@
-<%= link_to 'My profile', owner_path(current_user) %>
+<%#= link_to 'My profile', owner_path(current_user) %>
 
-<h1>Upcoming appointment</h1>
+<!-- <h1>Upcoming appointment</h1> -->
 
 
- <% @owner.pets.each do |pet| %>
-    <% pet.bookings.each do |booking| %>
-        <%= booking.date %>
-        <%= booking.time %>
-    <% end %>
-<% end %>  
+ <%# @owner.pets.each do |pet| %>
+    <%# pet.bookings.each do |booking| %>
+        <%#= booking.date %>
+        <%#= booking.time %>
+    <%# end %>
+<%# end %>
 
 
 
@@ -18,25 +18,103 @@
         style="width: 100%; height: 600px;"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-    </div> 
+    </div>
 <%
 =end%>
 
 
-<body>
-    <div class="row">
-      <div class="col" style="background-color: red">
-        <p>Hi</p>   
-     </div>
 
-      <div class="col" style="background-color: yellow">
-        <div class="column">
-            <div id="map"
-                style="width: 100%; height: 600px;"
-                data-markers="<%= @markers.to_json %>"
-                data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-            </div>   
+
+
+
+<%= render "shared/navbar" %>
+<%= link_to 'My profile', owner_path(current_user) %>
+
+<body>
+  <h2 style="color: #FF7E67; font-weight: 400; text-align: center">Clinics within your area</h2>
+
+    <div class="row users-dashboard" style="margin-top: 30px">
+
+      <div class="col-7">
+        <div class="container clinic-cards">
+          <% 6.times do %>
+            <%= link_to clinics_path(@clinic) do %>
+              <div class="one-clinic-card">
+                <p class="clinic-description"><strong>Clinic name:</strong> Techno pet</p>
+                <p class="clinic-description"><strong>Address:</strong>Hong Kong, Tsim Sha Tsui, Stanley Road 5</p>
+                <p class="clinic-description">⭐️ ⭐️ ⭐️ ⭐️</p>
+              </div>
+            <% end %>
+          <% end %>
         </div>
       </div>
-    </div>
-</body>
+
+      <!-- SECOND column -->
+      <div class="col-5 map-and-booking-info">
+
+        <div class="container">
+
+          <!-- MAP -->
+          <div id="map"
+            style="width: 100%; height: 300px; margin-top: 10px; margin-bottom: 20px;"
+            data-markers="<%= @markers.to_json %>"
+            data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+          </div>
+
+
+          <!-- APPOINTMENTS -->
+          <h3 style="color: #FF7E67; font-weight: 200; text-align: center">My upcoming appointments</h3>
+
+          <%# @user.pets.each do |pet| %>
+            <%# pet.bookings.each do |booking| %>
+              <div class="d-flex one-booking-col">
+                <div class="one-booking-col-grey-bar" style="background-color: lightgray; width: 1%">
+                </div>
+
+                <div class="one-booking-a-col" style="margin-right: 10px; padding: 5px 0 10px 10px">
+                  <p>12/12/2020 <%#= booking.date %></p>
+                </div>
+
+                <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
+                  <p>Time: <%#= booking.time %></p>
+                  <p>Clinic name:</p>
+                  <p>Clinic address:</p>
+                  <p>Veterinary booked: <%#= booking.vet.name %></p>
+                </div>
+
+
+                <div class="dropdown one-booking-c-col">
+                  <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+
+                  <div class="dropdown-menu dropdown-menu-right manage-action" aria-labelledby="dropdownMenuButton">
+                    <%= link_to "Pet health profile", class: " dropdown-item c-col-item"%>
+                    <%= link_to "Change booking", class: "dropdown-item c-col-item"%>
+                    <%= link_to "Cancel booking", class: "dropdown-item c-col-item"%>
+                    <!-- <a class="dropdown-item c-col-item"></a> -->
+                    <!-- <a class="dropdown-item c-col-item" href="#">Change booking</a> -->
+                    <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
+                  </div>
+                </div>
+
+               </div>
+            <%# end %>
+          <%# end %>
+
+          <!-- REMINDERS -->
+
+          <h3 style="margin-top: 20px; color: #FF7E67; font-weight: 200; text-align: center">Reminders</h3>
+          <p>Reminder 1</p>
+          <p>Reminder 2</p>
+          <p>Reminder 3</p>
+
+        </div>
+        <!-- END of this container -->
+
+
+     </div>
+      <!-- END of this col-5 -->
+
+  </div>
+  <!-- END of row -->
+
+<!-- </body> -->
