--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,22 @@
-<p>form for creating new booking</p>
+<div class="booking-banner d-flex justify-content-center">
+  <div class="booking-form-container">
+<p>Appointment booking</p>
 
+<div class = "booking-form d-flex ml-3 mr-2">
+    <div class="form-inputs-booking d-flex">
 <%= simple_form_for [@clinic, @booking] do |f| %>
 <%= f.input :vet, collection: @clinic.vets %>
 <%=f.input :date %>
 <%=f.input :time%>
-<% end %>
+
+<div class="form-actions-booking d-flex justify-content-around">
+   <!-- <button type="button" onclick="calculatePrice()">Calculate Price</button> -->
+    <%= f.button :submit, "Book"%>
+    <%= link_to "Back",owners_dash_path(@owner), class: "btn btn-lg btn-light"  %>
+
+  </div>
+    <% end %>
+    </div>
+</div>
+    </div>
+</div>
