--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -5,7 +5,7 @@
 <div class="container clinic-show">
 
   <h1>TechnoPet<%#= @clinic.name %></h1>
-  <h3>Sai Ying PunShop B, 2-4 Chung Ching Street‎<%#= @clinic.location %></h3>
+  <h3>Hong Kong, Tsim Sha Tsui, Stanley Road 5<%#= @clinic.location %></h3>
 
 
   <!-- <div class="row"> -->
