--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -29,13 +29,19 @@
         <div class="container clinic-cards">
           <% 6.times do %>
             <%= link_to clinics_path(@clinic) do %>
-              <div class="one-clinic-card">
-                <p class="clinic-description"><strong>Clinic name:</strong> Techno pet</p>
-                <p class="clinic-description"><strong>Address:</strong>Hong Kong, Tsim Sha Tsui, Stanley Road 5</p>
+            <div class="test-one-clinic-card">
+              <div class="test-one-clinic-card-description">
+                <h4 class="clinic-description" style="font-weight: 700">Techno pet</h4>
+                <p class="clinic-description" style="padding: 10px 0; border-top: 1px solid #ECF4F3; border-bottom: 1px solid #ECF4F3; ">Hong Kong, Tsim Sha Tsui, Stanley Road 5</p>
                 <p class="clinic-description">⭐️ ⭐️ ⭐️ ⭐️</p>
               </div>
+              <div class="header test-clinic-logo">
+                <img src="https://images.freeimg.net/rsynced_images/stethoscope-icon-2316460_1280.png" alt="Photo profile">
+              </div>
+            </div>
             <% end %>
           <% end %>
+
         </div>
       </div>
 
@@ -77,10 +83,10 @@
                 <div class="dropdown one-booking-c-col">
                   <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
 
-                  <div class="dropdown-menu dropdown-menu-right manage-action" aria-labelledby="dropdownMenuButton">
-                    <%= link_to "Pet health profile", class: " dropdown-item c-col-item"%>
-                    <%= link_to "Change booking", class: "dropdown-item c-col-item"%>
-                    <%= link_to "Cancel booking", class: "dropdown-item c-col-item"%>
+                  <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
+                    <%= link_to "Pet health profile", class: "dropdown-item manage-booking-item" %>
+                    <%= link_to "Change booking", class: "dropdown-item manage-booking-item"%>
+                    <%= link_to "Cancel booking", class: "dropdown-item manage-booking-item"%>
                     <!-- <a class="dropdown-item c-col-item"></a> -->
                     <!-- <a class="dropdown-item c-col-item" href="#">Change booking</a> -->
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
@@ -94,9 +100,9 @@
           <!-- REMINDERS -->
 
           <h3 style="margin-top: 20px; color: #FF7E67; font-weight: 200; text-align: center">Reminders</h3>
-          <p>Reminder 1</p>
-          <p>Reminder 2</p>
-          <p>Reminder 3</p>
+          <div style="background-color: rgba(254,126,104,0.2); padding-top: 5px">
+            <p style="color: grey; padding-left: 10px;">You currently have no reminders. To set one, please go to your profile page</p>
+          </div>
 
         </div>
         <!-- END of this container -->
